--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "conorjoseph-shopify",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
-  }
+	"name": "conorjoseph-shopify",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.0.10",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"styled-components": "^5.3.5"
+	},
+	"devDependencies": {
+		"eslint": "8.8.0",
+		"eslint-config-next": "12.0.10",
+		"sass": "^1.51.0"
+	}
 }
