--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.4.11",
 		"eslint": "8.8.0",
 		"eslint-config-next": "12.0.10",
-		"sass": "^1.51.0"
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8"
 	}
 }
