--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"next": "12.0.10",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"framer-motion": "^7.3.5",
+		"next": "^12.3.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
