--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.0",
 		"gsap": "^3.11.3",
 		"next": "^12.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
