--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@reduxjs/toolkit": "^1.9.0",
 		"gsap": "^3.11.3",
 		"next": "^12.3.1",
+		"next-pwa": "^5.6.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
